# gefyra-devcontainer

./: README.md  deck.yaml
.devcontainer/: Dockerfile  devcontainer.json
app/: Dockerfile  pyproject.toml
app/src/: main.py
k8s/: fastapi.yaml
